[package]
name = "redis-swapplex"
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
version = "0.1.2"
edition = "2021"
description = "Atomic state-transition based Redis multiplexing with reconnection notifications"
readme = "./README.md"
license = "MIT"
repository = "https://github.com/Bajix/redis-swapplex/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.5.0"
env-url = "1.0.3"
futures-util = "0.3.19"
once_cell = "1.9.0"
redis = { version = "0.21", features = ["aio", "tokio-comp"] }
tokio = { version = "1", features =  ["rt", "macros"] }

[dev-dependencies]
ctor = "0.1.21"

[features]
default = []
thread-local = []
