[package]
name = "redis-swapplex"
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
version = "0.8.2"
edition = "2021"
description = "Redis multiplexing with reconnection notifications and MGET auto-batching"
readme = "../../README.md"
license = "MIT"
repository = "https://github.com/Bajix/redis-swapplex/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.6.0"
derive-redis-swapplex = { version = "0.8.0", path = "../derive-redis-swapplex" }
env-url = "2"
futures-util = "0.3"
itoa = "1.0"
once_cell = "1.17"
redis = { version = "0.23", features = ["aio", "tokio-comp"] }
ryu = "1.0"
stack-queue = { version = "0.12", features = ["redis-args"] }
tokio = { version = "1", features = ["sync", "parking_lot"] }

[dev-dependencies]
async-local = { version = "1.2", features = ["barrier-protected-runtime"] }
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }
ctor = "0.2.0"
fred = "6.3.0"
redis = { version = "0.23", features = ["connection-manager"] }
tokio = { version = "1", features = [
  "rt",
  "macros",
  "rt-multi-thread",
  "time",
] }

[features]
default = []

# Downgrade async_t to async_trait::async_trait
boxed = ["stack-queue/boxed"]

[[bench]]
name = "benchmarks"
path = "../../benches/bench.rs"
harness = false
doc = false
