[package]
name = "redis-swapplex"
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
version = "0.12.1"
edition = "2021"
description = "Redis multiplexing with reconnection notifications and MGET auto-batching"
readme = "../../README.md"
license = "MIT"
repository = "https://github.com/Bajix/redis-swapplex/"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.7"
derive-redis-swapplex = { version = "0.12.1", path = "../derive-redis-swapplex" }
env-url = "2.1"
futures-util = "0.3"
into-bytes = "0.1"
once_cell = "1.19"
redis = { version = "0.25", features = ["aio", "tokio-comp"] }
stack-queue = { version = "0.14", features = ["redis-args"] }
tokio = { version = "1", features = ["sync", "parking_lot"] }

[dev-dependencies]
async-local = { version = "2", features = ["barrier-protected-runtime"] }
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
ctor = "0.2"
fred = "9.0"
redis = { version = "0.25", features = ["connection-manager"] }
tokio = { version = "1", features = [
  "rt",
  "macros",
  "rt-multi-thread",
  "time",
] }

[features]
default = []

[[bench]]
name = "benchmarks"
path = "../../benches/bench.rs"
harness = false
doc = false
